force-app/main/default/objects/CR_Engagement__c/fields/CR_Engagement_Category__c.field-meta.xml
<CustomField>
    <fullName>CR_Engagement_Category__c</fullName>
    <label>CR Engagement Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Old Version</fullName>
            </value>
            <value>
                <fullName>Receivables</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Market Competition</fullName>
            </value>
            <value>
                <fullName>Sponsor Changeover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>