force-app/main/default/objects/CR_Engagement__c/fields/CR_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>CR_Engagement_Type__c</fullName>
    <label>CR Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C - Needs Attention</fullName>
            </value>
            <value>
                <fullName>D - At Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>