force-app/main/default/objects/CR_Engagement__c/fields/Subscription_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Recurring_Amount__c</fullName>
    <formula>Subscription__r.Amount__c</formula>
    <label>Product Customer Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>